# nul-rdc-scripts

./: .gitignore  LICENSE  README.md  audiosummarystats.csv  folder_structure  folder_structure.txt  inventory.csv  pyproject.toml  report.json  sample.json  samplefbyf.json  stats  videodata.csv  videosummarystats.csv
AV/Audio/audio_processor/: README.md  run.py
AV/Film/: README.md
AV/Film/dpx2ffv1/: LICENSE
AV/Flatten/: LICENSE  README.md  run.py
AV/Flatten/flatten/: flatten.py  flatten_parameters.py
AV/NewVideoWIP/VideoScript/: Hashlib.py  mov2ffv1mainfunc.py
AV/Video/: README.md
Film/dpx2ffv1/: README.md
Film/rawcooked/: dpx2ffv1.py
GeneralInfo/: StyleGuidelinesforPython.md  script-dev-process.md
GeneralInfo/StyleandFormat/: StyleGuidelinesforPython.md  StyleandFormatResources.md
Image/Inventory/: CSVwriting.py  Flowchart (WIP).md  Inventory_Script  Inventory_Script -- WIP  inventory.csv  inventory_script.md  inventory_script.py  inventory_script_wfunctions.py  inventory_writeCSV_functional  keyToVariableNames.html
Image/inventory/: inventory_script.py
Image/iqc/: README.md  run.py  setup.py
Image/iqc_1.0/: README.md
Meadow/avr_migration/: README.md  migration.py
Meadow/image_ingest_sheet/: README.md
Meadow/mig_av/: README.md  run.py
Misc/meadow_csv_script/: LICENSE  README.md  run.py
Staging/InventoryRework/: BorF.py  BoxorFolder.py  buildboxorFolderCSV.py  choose.py  csvinput.py  inputvalidation.py  pagePath.py  pyproject.toml  run.py  savepath.py  setupquestions.py
Staging/QCScript/: .gitignore  LICENSE  QCScript.py  README.md  ReferenceData10Bit.txt  beautifulsoup.py  csvgeneration.py  datalist10bit.py  dataparsing.py  errortiers.py  example.xml  ffprobe.xsd  keycleaner.py  overallstatistics.py  parse.py  parser.py  passfail.py  pyproject.toml  requirements.txt  run.py  summarizationStats.md  try.py  validation.py  videoanalysis.py  xmlschemareader.py
Staging/QCScript/data/: Video10BitValues.csv  Video8BitValues.csv  severityLevels.py  videovalues10Bit.py  videovalues8Bit.py
Staging/QCScript/dataparsingandanalysis/: argparser - Not functional.py  argparser.py  baddata.txt  cleaners.py  dataparsing.py  errortiers.py  fbyfYUV.py  fbyfvideoanalysis.py  file.py  folder.py  overallstatistics.py  run.py  setup.py  setvideostandardvals.py  videoanalysis.py
Staging/QCScript/dataparsingandanalysis/parseandclean/: cleaners.py  dataparsing.py
Staging/QCScript/dataparsingandanalysis/testbuild/: testextraction.py
Staging/QCScript/dataparsingandanalysis/videoanalysis/: errortiers.py  fbyfTOUTVREP.py  fbyfYUV.py  test.py  videoanalysis.py  videovalues10Bit.py
Text/: indent_string.rb
Video/aja_mov2ffv1/: setup.py
docs/: script-dev-process.md
docs/StyleandFormat/: StyleandFormatResources.md
nulrdcscripts/aproc/: LICENSE  README.md  aproc.py  corefuncs.py  deckconfig.json  helpers.py  params.py  repo-mediaarea_1.0-24_all.deb.1  test.py
nulrdcscripts/aqc/: README.md  aqc.py  ff_helpers.py  helpers.py  inventory_helpers.py  parser.py  warnings.py
nulrdcscripts/avqc/: README.md  avqc.py  params.py
nulrdcscripts/docs/: script-dev-process.md
nulrdcscripts/fproc/: README.md
nulrdcscripts/ingest/: Ingest_Sheet_Maker.py  README.md  helpers.py  ingest.py  ingest_data.py  ingest_helpers.py  inventory_helpers.py  params.py
nulrdcscripts/ingestMicro/: Ingest_Sheet_Maker.py  README.md  helpers.py  ingest.py  ingest_data.py  ingest_helpers.py  inventory_helpers.py  params.py
nulrdcscripts/inventory/: BorF.py  buildboxorFolderCSV.py  choose.py  inputvalidation.py  inventory_script.md  pagePath.py  run.py  saveCSV.py  setup.py
nulrdcscripts/iqc/: LICENSE  README.md  iqc.py  run.py
nulrdcscripts/medusight/: PKG-INFO  README.md  pyproject.toml  test-build.bat  test_imports.py
nulrdcscripts/metadata/: README.md  combine_inventory.py
nulrdcscripts/tests/: README.md  aproc_test.py  colors.py  helpers.py  ingest_test.py  params.py  tests.py  vproc_test.py
nulrdcscripts/text/: Text.md  mets_to_yml.rb
nulrdcscripts/vproc/: README.md  assists.py  check.py  checks.py  corefuncs.py  csvfunctions.py  deckconfig.json  equipment.json  equipment_dict.py  helpers.py  metadata.py  newvproc.py  output.py  params.py  processing.py  setup.py  vproc.py
nulrdcscripts/vproc2/: main.py  params.py
nulrdcscripts/vqc/: .gitignore  ExampleVideoDataCSV.csv  QCScript.py  README.md  Video10BitValues.csv  Video8BitValues.csv  argparser.py  data.csv  dataparsing.py  file.py  fix.py  folderstructure.txt  framebyframestatistics.py  framestatistics.py  multiuse.py  output.py  outputdata.py  overallStatistics.py  pyproject.toml  qcsetup.py  setup.py  testdata.csv  videosummarystats.csv  vqcgui.py
nulrdcscripts/vqc/app/: app.py  build.py  main.js  package.json  preload.js
nulrdcscripts/vqc/app/templates/: index.html
nulrdcscripts/vqc/app/web/: design.css  index.html  main.js
nulrdcscripts/vqc/data/: templateVideo.txt
nulrdcscripts/vqc/medusight/: LICENSE  __init__.py  cleaners.py  dataparsing.py  frames_report.py  framestatistics.py  medusight.py  output.py  overallStatistics.py  params.py  qcsetup.py  video_data_extractor.py
nulrdcscripts/vqc/medusight/data/: Video10BitValues.csv  Video8BitValues.csv  templateFrames.txt  templateVideo.txt
nulrdcscripts/vqc/medusight/mainprocessing/: cleaners.py  dataparsing.py  params.py  qcsetup.py
nulrdcscripts/vqc/medusight/medusight/: medusight.py  params.py
nulrdcscripts/vqc/medusight/medusight/analysis/: audioanalysis.py
nulrdcscripts/vqc/output/: output.py  output.txt
(+269 files in other folders)
