[tool.poetry]
name = "nul-rdc-scripts"
version = "0.2.1"
description = "Scripts for NUL RDC Digitization Team"
authors = [
    "Northwestern University Libraries <repository@northwestern.edu>",
    "Sophia Francis",
    "Alec Bertoy",
    "Joshua Yocum (until Oct 2022)",
]
packages = [{include = "nulrdcscripts"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aproc = 'nulrdcscripts.aproc.aproc:main'
vproc = 'nulrdcscripts.vproc.vproc:main'
ingest = 'nulrdcscripts.ingest.ingest:main'
oyez = 'nulrdcscripts.tools.oyez.runfile:main'
ffplaywindow = 'nulrdcscripts.tools.ffplaywindow.main:main'
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
