[tool.poetry]
name = "nul-rdc-scripts"
version = "0.4.1"
description = "Scripts for NUL RDC Digitization Team"
authors = [
    "Northwestern University Libraries <repository@northwestern.edu>",
    "Sophia Francis",
    "Alec Bertoy (until May 2024",
    "Joshua Yocum (until Oct 2022)",
]
packages = [{include = "nulrdcscripts"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aproc = 'nulrdcscripts.aproc.aproc:main'
vproc = 'nulrdcscripts.vproc.vproc:main'
ingest = 'nulrdcscripts.ingest.ingest:main'
embedExtract = 'nulrdcscripts.tools.EmbedExtract.runfile:main'
ffplaywindow = 'nulrdcscripts.tools.ffplaywindow.main:main'
spectrograms = 'nulrdcscripts.tools.spectrogramgeneration.main:main'
md5 = 'nulrdcscripts.tools.md5generation.main:main'
trim = 'nulrdcscripts.tools.videotrimmer.main:main'
micro = 'nulrdcscripts.ingestMicro.ingest:main'
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
