[tool.poetry]
name = "qcscript"
version = "0.0.1"
description = "Script to automate the video QC process"
authors = "Northwestern University Libraries <repository@northwestern.edu>"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
