[project]
name = "medusight"
version = "0.2.0"
description = "This is a script that will do the initial round of QC for videos for archival purposes."
authors = [{name = "Northwestern University Libraries", email = "repository@northwestern.edu"}, {name = "Sophia Francis"}]

readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "lxml >=6.0.0,<7.0.0",
    "progressbar2 >=4.5.0,<5.0.0",
    "pandas >=2.3.0,<3.0.0"
]

[project.scripts]
medu="medusight.medusight:main"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"