[tool.poetry]
name = "medusight"
version = "0.2.0"
description = "This is a script that will do the initial round of QC for videos for archival purposes."
authors = [
    "Northwestern University Libraries <repository@northwestern.edu>",
    "Sophia Francis <repository@northwestern.edu>"
]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
lxml = "^6.0.0"
progressbar2 = "^4.5.0"
pandas = "^2.3.0"
tk = "^0.1.0"
eel = "^0.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
black = "^24.0.0"

[tool.poetry.scripts]
medu = "medusight.medusight:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
